IJ-179 - Stopped wrapping of slider labels on new WBA view.

--- a/app/assets/stylesheets/wellbeing_assessments.scss
+++ b/app/assets/stylesheets/wellbeing_assessments.scss
@@ -110,9 +110,6 @@ section#wellbeing {
 
       label {
         width: 100%;
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
       }
 
       input {
